# projektpompka

./: .gitignore  README.md  docker-compose-first-run.md  docker-compose-with-volume-first-run.md  docker-compose-with-volume.yml  docker-compose.yml  settings.gradle
DemoTCP/: build.gradle  settings.gradle
DemoTCP/src/main/java/com/example/DemoTCP/: ApplicationStartupRunner.java  ConnectionManager.java  DemoTcpApplication.java  MessageHandler.java  TcpConnectionHandler.java  TcpConnectionThreadPool.java  TcpConnectionsListener.java
DemoTCP/src/main/java/com/example/DemoTCP/config/: Beans.java
DemoTCP/src/main/java/com/example/DemoTCP/entity/: Sensors.java
DemoTCP/src/main/java/com/example/DemoTCP/repository/: SensorsRepository.java
DemoTCP/src/main/java/com/example/DemoTCP/restController/: SensorsController.java
DemoTCP/src/main/java/com/example/DemoTCP/service/: SensorsService.java
DemoTCP/src/main/resources/: application.properties
DemoTCP/src/test/java/com/example/DemoTCP/: DemoTcpApplicationTests.java
Doniczka/: platformio.ini
Doniczka/lib/Config/: Config.cpp  Config.h
Doniczka/lib/RestClient/: RestClient.h
Doniczka/src/: Doniczka.code-workspace  RestClient.cpp  SharkFrameManager.cpp  main.cpp
GardenManager/: build.gradle  settings.gradle
GardenManager/src/main/java/com/sharks/GardenManager/: GardenManagerApplication.java
GardenManager/src/main/java/com/sharks/GardenManager/DTO/: ExampleRequest.java  ExampleResponse.java
GardenManager/src/main/resources/: application.properties
GardenManager/src/test/java/com/sharks/GardenManager/: GardenManagerApplicationTests.java
PompaESP32/: CMakeLists.txt
PompaESP32/lib/FileOperations/src/: ConfigLoader.cpp  ConfigLoader.h  FileOperations.cpp
PompaESP32/lib/Sensors/: library.properties
PompaESP32/lib/Sensors/src/: Sensors.cpp  Sensors.h
PompaESP32/lib/Water_level/: library.properties
PompaESP32/lib/Water_level/src/: Water_level.cpp
PompaESP32/src/: FileOperations.h  SharkFrameManager.cpp  SharkFrameManager.h  main.cpp  notes
PompaESP32/test/: alt_main.cpp  backup_main.cpp
databaseMigration/: build.gradle
databaseMigration/src/main/java/com/example/databaseMigration/: DatabaseMigrationApplication.java
databaseMigration/src/main/resources/: application.properties
databaseMigration/src/main/resources/db/migration/: V00001__create_tables_for_devices.sql
databaseMigration/src/test/java/com/example/databaseMigration/: DatabaseMigrationApplicationTests.java
doniczkaSymulator/: settings.gradle
doniczkaSymulator/src/main/java/com/example/doniczkaSymulator/: DoniczkaSymulatorApplication.java  RestTemplateResponseErrorHandler.java  SimulationThread.java
doniczkaSymulator/src/test/java/com/example/doniczkaSymulator/: DoniczkaSymulatorApplicationTests.java
gardenManager/: build.gradle
gardenManager/src/main/java/com/sharks/gardenManager/: GardenManagerApplication.java
gardenManager/src/main/resources/: application.properties
gardenManager/src/main/resources/db/migration/: V00001__create_tables_for_devices.sql  V00002__create_tables_for_users.sql  V00003__create_tables_for_users.sql  V00004__add_dummy_device_settings.sql
gardenManager/src/test/java/com/sharks/gardenManager/: GardenManagerApplicationTests.java  TestContainersBase.java
planter/lib/Config/: Config.cpp  Config.h
planter/lib/RestClient/: RestClient.cpp  RestClient.h
planter/lib/Sensors/: Sensors.cpp  Sensors.h
planter/lib/Water_level/src/: Water_level.h
planter/src/: Planter.code-workspace  main.cpp
planter/test/: i2c_test.cpp
planterSimulator/: build.gradle
planterSimulator/src/main/java/com/example/planterSimulator/: PlanterSimulatorApplication.java  RestTemplateResponseErrorHandler.java  SimulationThread.java
planterSimulator/src/test/java/com/example/planterSimulator/: PlanterSimulatorApplicationTests.java
scheme/: pompa.fzz
webApp/: build.gradle  settings.gradle
webApp/src/main/java/project/pompka/webApp/: ListExampleController.java  LoginCheckController.java  UserInformationController.java  WebAppApplication.java
webApp/src/main/resources/static/components/module-login/: login-page.html
webApp/src/main/resources/static/components/module-page/: user-page.html
webApp/src/main/resources/static/lib/: restShark.js
webApp/src/test/java/project/pompka/webApp/: WebAppApplicationTests.java
webapp/: build.gradle
webapp-frontend/: README.md  angular.json  build.gradle  karma.conf.js  package-lock.json  package.json  serve.bat
webapp-frontend/src/: index.html  proxy.conf.json  styles.css
webapp-frontend/src/app/: app-routing.module.ts  app.component.spec.ts  app.module.ts
webapp-frontend/src/app/device-preview/: device-preview.component.html  device-preview.component.spec.ts  device-preview.component.ts
webapp-frontend/src/app/device-settings/: device-settings.component.html  device-settings.component.spec.ts  device-settings.component.ts
webapp-frontend/src/app/device-status/: device-status.component.html  device-status.component.spec.ts  device-status.component.ts
webapp-frontend/src/app/devices-list/: devices-list.component.html  devices-list.component.spec.ts  devices-list.component.ts
webapp-frontend/src/app/home-page/: home-page.component.html
webapp-frontend/src/app/login-page/: login-page.component.css  login-page.component.html  login-page.component.ts
webapp-frontend/src/app/navigation-bar/: navigation-bar.component.html  navigation-bar.component.ts
webapp-frontend/src/app/pageable-table/: pageable-table.component.css  pageable-table.component.html  pageable-table.component.spec.ts  pageable-table.component.ts
webapp-frontend/src/app/services/: anonymous-user.service.spec.ts  anonymous-user.service.ts  device-preview-data.service.spec.ts  device-preview-data.service.ts  rest-client.service.ts  user-info.service.ts
webapp-frontend/src/domain/: device.ts
webapp/src/main/java/com/sharks/webapp/: GardenDataController.java  WebappApplication.java
webapp/src/test/java/com/sharks/webapp/: WebappApplicationTests.java
(+55 files in other folders)
